--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "polaroid-studio",
+  "name": "tamagochi-cam",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "eslint"
   },
   "dependencies": {
@@ -22,6 +22,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.5.0",
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
@@ -31,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
+    "@types/simple-peer": "^9.11.8",
     "@types/uuid": "^11.0.0",
     "autoprefixer": "^10.4.22",
     "eslint": "^8.57.1",
